# first-principles-textbook

./: .envrc  CHANGELOG.md  first-principles-textbook.cabal  flake.nix
app/: Fib.hs  FunctionWithWhere.hs  IsPalindrome.hs  MyAbs.hs  TupleFunction.hs  print3broken.hs
