cabal-version:   3.0
name:            first-principles-textbook
version:         0.1.0.0
license:         GPL-3.0-only
license-file:    LICENSE
author:          johnbarnes-vi
maintainer:      lj502jr@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable first-principles-textbook
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   app
    default-language: GHC2021
